--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -231,22 +231,39 @@ dns:
   # DNS预热功能
   prefetch-domain: true
   prefetch-domains:
-    - 'google.com'
-    - 'youtube.com'
-    - 'github.com'
-    - 'openai.com'
-    - 'bing.com'
+    - 'alipay.com'
+    - 'apple.com'
+    - 'arxiv.org'
     - 'baidu.com'
     - 'bilibili.com'
-    - 'alipay.com'
-    - 'taobao.com'
+    - 'bing.com'
+    - 'claude.ai'
     - 'cloudflare.com'
+    - 'discord.com'
+    - 'github.com'
+    - 'gitlab.com'
+    - 'google.com'
+    - 'instagram.com'
     - 'microsoft.com'
-    - 'apple.com'
     - 'netflix.com'
+    - 'notion.so'
+    - 'obsidian.md'
+    - 'openai.com'
+    - 'paypal.com'
+    - 'perplexity.ai'
+    - 'protonmail.com'
+    - 'pubmed.ncbi.nlm.nih.gov'
+    - 'scholar.google.com'
+    - 'sci-hub.se'
+    - 'slack.com'
+    - 'spotify.com'
+    - 'stackoverflow.com'
+    - 'taobao.com'
+    - 'telegram.org'
     - 'twitter.com'
     - 'x.com'
-    - 'instagram.com'
+    - 'youtube.com'
+    - 'zoom.us'
 
   # 默认DNS服务器
   default-nameserver:
