--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -77,28 +77,25 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Lo
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 
 # 2. 广告和隐私保护（高优先级，避免不必要的连接）
-ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.yaml
-ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy.yaml
-ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Hijacking/Hijacking.yaml
+ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AdvertisingLite/AdvertisingLite.yaml
 
-# 3. 开发和AI服务（高频使用的工作工具）
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Vercel/Vercel.yaml
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitLab/GitLab.yaml
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/JetBrains/JetBrains.yaml
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/StackOverflow/StackOverflow.yaml
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Docker/Docker.yaml
+# 3. 预处理常见特定域名（添加常见域名到prepend-rules，匹配效率最高）
+# ...已在DNS配置的prepend-rules部分实现...
+
+# 4. 开发和AI服务（高频使用的工作工具）
+ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
+ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Vercel/Vercel.list
+ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitLab/GitLab.list
+ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/JetBrains/JetBrains.list
+ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/StackOverflow/StackOverflow.list
+ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Docker/Docker.list
 ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Developer/Developer.yaml
 
 ruleset=🤖AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🤖AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Claude.list
 ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AI/AI.yaml
-ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Anthropic/Anthropic.yaml
-ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.yaml
-ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Perplexity/Perplexity.yaml
-ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Midjourney/Midjourney.yaml
 
-# 4. 即时通讯和游戏（低延迟需求）
+# 5. 即时通讯和游戏（低延迟需求）
 ruleset=📱电报,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=📱电报,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/telegramcidr.txt
 
@@ -106,20 +103,20 @@ ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule
 ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
 ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.list
 
-# 5. 重要的国内服务（高频使用的本地服务）
+# 6. 重要的国内服务（高频使用的本地服务）
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/WeChat/WeChat.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AliPay/AliPay.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UnionPay/UnionPay.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Baidu/Baidu.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
 
-# 6. 主要国际平台服务（常用大型服务提供商）
+# 7. 主要国际平台服务（常用大型服务提供商）
 ruleset=🛡️Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=🛡️Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleSearch/GoogleSearch.list
 ruleset=🍎苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=Ⓜ️微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 
-# 7. 流媒体服务（视频流量大，但访问频率相对较低）
+# 8. 流媒体服务（视频流量大，但访问频率相对较低）
 ruleset=📺B站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list
 ruleset=📺B站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 ruleset=🎬Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
@@ -130,7 +127,7 @@ ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_sc
 ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrimeVideo/PrimeVideo.list
 ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
 
-# 8. 社交媒体平台
+# 9. 社交媒体平台
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Instagram/Instagram.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Discord/Discord.list
@@ -141,7 +138,7 @@ ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Figma/Figma.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Canva/Canva.list
 
-# 9. 其他服务（使用频率相对较低）
+# 10. 其他服务（使用频率相对较低）
 ruleset=📧邮件服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Mail/Mail.list
 ruleset=🔎搜索引擎,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bing/Bing.list
 ruleset=🔎搜索引擎,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleSearch/GoogleSearch.list
@@ -149,7 +146,7 @@ ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scr
 ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
 ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleDrive/GoogleDrive.list
 
-# 10. 中国大陆网站和IP（规则集较大，放在后面）
+# 11. 中国大陆网站和IP（规则集较大，放在后面）
 # 按从小到大的规则排序，提高匹配效率
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/applications.txt
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/private.txt
@@ -160,11 +157,11 @@ ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/cncidr.txt
 ruleset=🛩️墙内,[]GEOIP,CN,no-resolve
 
-# 11. 国外网站集合规则（规则集大，放在最后）
+# 12. 国外网站集合规则（规则集大，放在最后）
 ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/proxy.txt
 ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global.list
 
-# 12. 兜底规则（保持在最后）
+# 13. 兜底规则（保持在最后）
 ruleset=🐟漏网之鱼,[]FINAL
 
 # ========== Clash核心配置 ==========
@@ -202,28 +199,12 @@ dns:
   fake-ip-range: 198.18.0.1/16
   fake-ip-filter:          # 添加常见需要真实IP的服务
     - '*.lan'
-    - 'stun.*.*'
-    - 'stun.*.*.*'
-    - '*.msftncsi.com'
-    - 'msftconnecttest.com'
-    - 'time.*.com'
-    - 'time.*.gov'
-    - 'time.*.edu.cn'
-    - '*.ntp.org.cn'
-    - '*.pool.ntp.org'
-    - 'time.apple.com'
     - 'localhost.ptlogin2.qq.com'
     - '*.qq.com'
     - '*.alipay.com'
     - '*.taobao.com'
     - 'mtalk.google.com'
     - 'lens.l.google.com'
-    - '*.aliyun.com'
-    - '*.alicdn.com'
-    - '*.jd.com'
-    - '*.tmall.com'
-    - '*.tencent.com'
-    - '*.weixin.qq.com'
   use-hosts: true
   nameserver-cache-size: 8192 # 增加缓存大小
   prefer-h3: true
@@ -295,22 +276,14 @@ dns:
     'domain:telegram.org,domain:t.me': [https://dns.google/dns-query]
     'domain:spotify.com,domain:spotifycdn.com': [https://dns.google/dns-query]
     'domain:cloudflare.com,domain:cloudflare.net': [https://dns.google/dns-query]
-
+    'domain:github.com,domain:githubusercontent.com': [https://dns.google/dns-query]
 # 常用域名预处理规则
 prepend-rules:
   - 'DOMAIN-SUFFIX,openai.com,🤖AI'
   - 'DOMAIN-SUFFIX,anthropic.com,🤖AI'
   - 'DOMAIN-SUFFIX,claude.ai,🤖AI'
-  - 'DOMAIN-SUFFIX,perplexity.ai,🤖AI'
-  - 'DOMAIN-SUFFIX,gemini.google.com,🤖AI'
-  - 'DOMAIN-SUFFIX,bard.google.com,🤖AI'
-  - 'DOMAIN-SUFFIX,poe.com,🤖AI'
-  - 'DOMAIN-SUFFIX,midjourney.com,🤖AI'
   - 'DOMAIN-SUFFIX,github.com,🧰开发工具'
   - 'DOMAIN-SUFFIX,githubusercontent.com,🧰开发工具'
-  - 'DOMAIN-SUFFIX,gitlab.com,🧰开发工具'
-  - 'DOMAIN-SUFFIX,vercel.app,🧰开发工具'
-  - 'DOMAIN-SUFFIX,vercel.com,🧰开发工具'
   - 'DOMAIN-SUFFIX,google.com,🛡️Google服务'
   - 'DOMAIN-SUFFIX,youtube.com,🎬YouTube'
   - 'DOMAIN-SUFFIX,youtu.be,🎬YouTube'
