--- a/All_weather_use.ini
+++ b/All_weather_use.ini
@@ -77,7 +77,10 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Lo
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 
 # 2. 广告和隐私保护（高优先级，避免不必要的连接）
-ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AdvertisingLite/AdvertisingLite.yaml
+# 广告精简版 - 更稳定的链接
+ruleset=💩广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=💩广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=💩广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
 ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy.list
 ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Hijacking/Hijacking.list
 
@@ -91,14 +94,16 @@ ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule
 ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/JetBrains/JetBrains.list
 ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/StackOverflow/StackOverflow.list
 ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Docker/Docker.list
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Developer/Developer.yaml
+# 更新开发者规则链接 - yaml改为list
+ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Developer/Developer.list
 ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NPM/NPM.list
 ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Atlassian/Atlassian.list
 ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/MongoDB/MongoDB.list
 
 ruleset=🤖AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🤖AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Claude.list
-ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AI/AI.yaml
+# 更新AI规则链接 - yaml改为list
+ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AI/AI.list
 ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.list
 ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Anthropic/Anthropic.list
 ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Midjourney/Midjourney.list
@@ -220,7 +225,8 @@ ruleset=🛩️墙内,[]GEOIP,CN,no-resolve
 
 # 12. 国外网站集合规则（规则集大，放在最后）
 ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt
-ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global.list
+# 更新全球规则 - 更换为更稳定的规则源
+ruleset=✈️起飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 
 # 13. 兜底规则（保持在最后）
 ruleset=🐟漏网之鱼,[]FINAL
@@ -343,12 +349,6 @@ prepend-rules:
   - 'DOMAIN-SUFFIX,openai.com,🤖AI'
   - 'DOMAIN-SUFFIX,anthropic.com,🤖AI'
   - 'DOMAIN-SUFFIX,claude.ai,🤖AI'
-  - 'DOMAIN-SUFFIX,github.com,🧰开发工具'
-  - 'DOMAIN-SUFFIX,githubusercontent.com,🧰开发工具'
-  - 'DOMAIN-SUFFIX,google.com,🛡️Google服务'
-  - 'DOMAIN-SUFFIX,youtube.com,🎬YouTube'
-  - 'DOMAIN-SUFFIX,youtu.be,🎬YouTube'
-  - 'DOMAIN-SUFFIX,googlevideo.com,🎬YouTube'
   - 'DOMAIN-SUFFIX,netflix.com,🎬Netflix'
   - 'DOMAIN-SUFFIX,twitter.com,📲社交媒体'
   - 'DOMAIN-SUFFIX,x.com,📲社交媒体'
