--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -282,12 +282,6 @@ prepend-rules:
   - 'DOMAIN-SUFFIX,openai.com,🤖AI'
   - 'DOMAIN-SUFFIX,anthropic.com,🤖AI'
   - 'DOMAIN-SUFFIX,claude.ai,🤖AI'
-  - 'DOMAIN-SUFFIX,github.com,🧰开发工具'
-  - 'DOMAIN-SUFFIX,githubusercontent.com,🧰开发工具'
-  - 'DOMAIN-SUFFIX,google.com,🛡️Google服务'
-  - 'DOMAIN-SUFFIX,youtube.com,🎬YouTube'
-  - 'DOMAIN-SUFFIX,youtu.be,🎬YouTube'
-  - 'DOMAIN-SUFFIX,googlevideo.com,🎬YouTube'
   - 'DOMAIN-SUFFIX,netflix.com,🎬Netflix'
   - 'DOMAIN-SUFFIX,twitter.com,📲社交媒体'
   - 'DOMAIN-SUFFIX,x.com,📲社交媒体'
@@ -295,3 +289,24 @@ prepend-rules:
   - 'DOMAIN-SUFFIX,discord.com,📲社交媒体'
   - 'DOMAIN-SUFFIX,telegram.org,📱电报'
   - 'DOMAIN-SUFFIX,t.me,📱电报'
+  - 'DOMAIN-SUFFIX,facebook.com,📲社交媒体'
+  - 'DOMAIN-SUFFIX,fb.com,📲社交媒体'
+  - 'DOMAIN-SUFFIX,spotify.com,🟢Spotify'
+  - 'DOMAIN-SUFFIX,tiktok.com,📲社交媒体'
+  - 'DOMAIN-SUFFIX,disney.com,🎬流媒体'
+  - 'DOMAIN-SUFFIX,disneyplus.com,🎬流媒体'
+  - 'DOMAIN-SUFFIX,apple.com,🍎苹果服务'
+  - 'DOMAIN-SUFFIX,icloud.com,🍎苹果服务'
+  - 'DOMAIN-SUFFIX,microsoft.com,Ⓜ️微软服务'
+  - 'DOMAIN-SUFFIX,msn.com,Ⓜ️微软服务'
+  - 'DOMAIN-SUFFIX,bing.com,🔎搜索引擎'
+  - 'DOMAIN-SUFFIX,twitch.tv,📲社交媒体'
+  - 'DOMAIN-SUFFIX,reddit.com,📲社交媒体'
+  - 'DOMAIN-SUFFIX,hbo.com,🎬流媒体'
+  - 'DOMAIN-SUFFIX,gemini.google.com,🤖AI'
+  - 'DOMAIN-SUFFIX,amazon.com,✈️起飞'
+  - 'DOMAIN-SUFFIX,proton.me,📧邮件服务'
+  - 'DOMAIN-SUFFIX,perplexity.ai,🤖AI'
+  - 'DOMAIN-SUFFIX,bard.google.com,🤖AI'
+  - 'DOMAIN-SUFFIX,midjourney.com,🤖AI'
+
