--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -137,20 +137,43 @@ ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/
 ruleset=🐟漏网之鱼,[]FINAL
 
 # ========== Clash核心配置 ==========
-# 基础网络设置
-mixed-port: 10808
+# 基础网络设置 - 移动设备优化
+mixed-port: 7890 # 更改为标准端口，更通用且易于配置
 allow-lan: true
 bind-address: '*'
 mode: rule
-log-level: warning
-ipv6: false
+log-level: silent # 降低日志级别减少写入操作，节省电量
+ipv6: false # 移动网络下保持关闭ipv6降低流量和电池消耗
 external-controller: 127.0.0.1:9090
 external-ui: dashboard
 secret: ""
+profile:
+  store-selected: true # 持久化选择的节点，切换网络环境时保持配置
+  store-fake-ip: true # 保存fake-ip映射，减少重复解析
+
+# 性能优化参数
 unified-delay: true
 tcp-concurrent: true
+keep-alive-interval: 15 # 设置TCP保活间隔15秒，优化移动网络下连接稳定性
+find-process-mode: strict # 精准的进程匹配模式
+sniffer: # 启用流量探测，提高域名识别准确度
+  enable: true
+  sniff:
+    TLS:
+      ports: [443, 8443]
+    HTTP:
+      ports: [80, 8080-8090]
+  force-domain: # 强制嗅探这些域名
+    - '*.google.com'
+    - '*.facebook.com'
+    - '*.youtube.com'
+    - '*.netflix.com'
+  skip-domain: # 跳过嗅探这些域名
+    - 'Mijia Cloud'
+    - '*.alipay.com'
+    - '*.taobao.com'
 
-# TUN模式配置
+# TUN模式配置 - 移动设备优化
 tun:
   enable: true
   stack: system
@@ -160,12 +183,25 @@ tun:
   auto-route: true
   auto-detect-interface: true
   strict-route: true
-  mtu: 9000
+  mtu: 1500 # 较小的MTU值，适合移动网络环境
+  inet4-route-address: # 添加路由表以提高移动网络稳定性
+    - 0.0.0.0/1
+    - 128.0.0.0/1
+  # 以下额外配置提高移动设备的VPN稳定性
+  endpoint-independent-nat: true # 独立NAT确保连接一致性
+  include-uid: # 默认不包含的UID
+    - 0
+  exclude-uid: # 排除网络管理应用
+    - 1000
+  include-android-user: # 包含安卓用户
+    - 0
+    - 10
+  disable-udp: false # 保持UDP支持，提高应用兼容性
 
-# DNS配置
+# DNS配置 - 移动设备优化
 dns:
   enable: true
-  ipv6: false
+  ipv6: false # 移动网络下关闭ipv6 DNS查询
   listen: 0.0.0.0:53
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
@@ -177,11 +213,19 @@ dns:
     - '*.taobao.com'
     - 'mtalk.google.com'
     - 'lens.l.google.com'
+    - 'dl.google.com' # 避免Android系统更新问题
+    - 'android.clients.google.com' # 避免Android应用下载问题
   use-hosts: true
-  nameserver-cache-size: 8192
-  prefer-h3: true
+  nameserver-cache-size: 4096 # 减小缓存大小，避免内存占用过大
+  cache-size: 8192 # 提高DNS缓存大小，减少重复查询
+  cache-expire: 3600 # 设置缓存过期时间为1小时，平衡性能和准确性
+  prefer-h3: false # 移动网络下HTTP/3不稳定，关闭
+  bootstrap-dns: # 引导DNS服务器，在启动时使用
+    - 223.5.5.5
+    - 119.29.29.29
+    - 8.8.8.8
 
-  # DNS预热功能
+  # DNS预热功能 - 针对移动设备优化
   prefetch-domain: true
   prefetch-domains:
     - 'google.com'
@@ -193,36 +237,32 @@ dns:
     - 'bilibili.com'
     - 'alipay.com'
     - 'taobao.com'
-    - 'cloudflare.com'
-    - 'microsoft.com'
-    - 'apple.com'
-    - 'netflix.com'
-    - 'twitter.com'
-    - 'x.com'
-    - 'instagram.com'
+    - 'weibo.com' # 常用中国社交媒体
+    - 'jd.com' # 常用中国电商
+    - 'douyin.com' # 常用短视频
+  prefetch-interval: 600 # 10分钟预热一次，在移动网络下平衡性能和流量消耗
 
-  # 默认DNS服务器
+  # 默认DNS服务器 - 优先使用国内DNS降低延迟
   default-nameserver:
-    - 223.6.6.6
-    - 119.29.29.29
-    - 8.8.8.8
-    - 1.1.1.1
+    - 223.6.6.6 # 阿里DNS
+    - 119.29.29.29 # 腾讯DNS
+    - 114.114.114.114 # 114DNS
 
-  # 主要DNS服务器
+  # 主要DNS服务器 - 优化移动网络下的解析速度
   nameserver:
-    - https://dns.alidns.com/dns-query
-    - https://doh.pub/dns-query
-    - https://dns.google/dns-query
-    - tls://223.5.5.5:853
+    - https://223.5.5.5/dns-query # 阿里DNS优先，移动网络友好
+    - https://doh.pub/dns-query # 中国公共DNS，速度快
+    - tls://223.5.5.5:853 # 阿里TLS备选
+    - https://dns.alidns.com/dns-query # 备选
 
-  # 国外回落DNS
+  # 国外回落DNS - 选择延迟较低的服务器
   fallback:
     - https://dns.google/dns-query
     - https://cloudflare-dns.com/dns-query
-    - https://doh.opendns.com/dns-query
+    - tls://1.1.1.1:853 # Cloudflare TLS备选
     - https://dns.quad9.net/dns-query
 
-  # 防DNS污染设置
+  # DNS污染防护 - 优化规则避免冗余查询
   fallback-filter:
     geoip: true
     geoip-code: CN
@@ -230,54 +270,25 @@ dns:
       - 240.0.0.0/4
       - 127.0.0.1/8
       - 0.0.0.0/32
+    # 精简关键域名列表，减少不必要的回落查询
     domain:
       - '+.google.com'
       - '+.facebook.com'
       - '+.youtube.com'
       - '+.github.com'
-      - '+.githubusercontent.com'
+      - '+.netflix.com'
       - '+.openai.com'
 
-  # 关键域名DNS策略
-  nameserver-policy:
-    'domain:github.com,domain:githubusercontent.com': [https://dns.google/dns-query, https://cloudflare-dns.com/dns-query]
-    'domain:openai.com,domain:anthropic.com,domain:claude.ai': [https://dns.google/dns-query, https://cloudflare-dns.com/dns-query]
-    'domain:netflix.com,domain:nflxvideo.net': [https://dns.google/dns-query]
-    'domain:alipay.com,domain:taobao.com,domain:wechat.com': [https://dns.alidns.com/dns-query, https://doh.pub/dns-query]
-    'domain:twitter.com,domain:x.com,domain:instagram.com,domain:discord.com': [https://dns.google/dns-query]
-    'domain:telegram.org,domain:t.me': [https://dns.google/dns-query]
-    'domain:spotify.com,domain:spotifycdn.com': [https://dns.google/dns-query]
-    'domain:cloudflare.com,domain:cloudflare.net': [https://dns.google/dns-query]
+# 代理模式高级设置
+proxy-groups-first: true # 优先测试代理组，提高速度
+global-client-fingerprint: chrome # 使用Chrome指纹，提高兼容性
 
-# 常用域名预处理规则
-prepend-rules:
-  - 'DOMAIN-SUFFIX,openai.com,🤖AI'
-  - 'DOMAIN-SUFFIX,anthropic.com,🤖AI'
-  - 'DOMAIN-SUFFIX,claude.ai,🤖AI'
-  - 'DOMAIN-SUFFIX,netflix.com,🎬Netflix'
-  - 'DOMAIN-SUFFIX,twitter.com,📲社交媒体'
-  - 'DOMAIN-SUFFIX,x.com,📲社交媒体'
-  - 'DOMAIN-SUFFIX,instagram.com,📲社交媒体'
-  - 'DOMAIN-SUFFIX,discord.com,📲社交媒体'
-  - 'DOMAIN-SUFFIX,telegram.org,📱电报'
-  - 'DOMAIN-SUFFIX,t.me,📱电报'
-  - 'DOMAIN-SUFFIX,facebook.com,📲社交媒体'
-  - 'DOMAIN-SUFFIX,fb.com,📲社交媒体'
-  - 'DOMAIN-SUFFIX,spotify.com,🟢Spotify'
-  - 'DOMAIN-SUFFIX,tiktok.com,📲社交媒体'
-  - 'DOMAIN-SUFFIX,disney.com,🎬流媒体'
-  - 'DOMAIN-SUFFIX,disneyplus.com,🎬流媒体'
-  - 'DOMAIN-SUFFIX,apple.com,🍎苹果服务'
-  - 'DOMAIN-SUFFIX,icloud.com,🍎苹果服务'
-  - 'DOMAIN-SUFFIX,microsoft.com,Ⓜ️微软服务'
-  - 'DOMAIN-SUFFIX,msn.com,Ⓜ️微软服务'
-  - 'DOMAIN-SUFFIX,bing.com,🔎搜索引擎'
-  - 'DOMAIN-SUFFIX,twitch.tv,📲社交媒体'
-  - 'DOMAIN-SUFFIX,reddit.com,📲社交媒体'
-  - 'DOMAIN-SUFFIX,hbo.com,🎬流媒体'
-  - 'DOMAIN-SUFFIX,gemini.google.com,🤖AI'
-  - 'DOMAIN-SUFFIX,amazon.com,✈️起飞'
-  - 'DOMAIN-SUFFIX,proton.me,📧邮件服务'
-  - 'DOMAIN-SUFFIX,perplexity.ai,🤖AI'
-  - 'DOMAIN-SUFFIX,bard.google.com,🤖AI'
-  - 'DOMAIN-SUFFIX,midjourney.com,🤖AI'
+# 移动设备网络状态检测
+url-test-interval: 600 # 延长测速间隔到10分钟，节省电量和流量
+connection-test-url: https://cp.cloudflare.com/generate_204 # 更换测试网址，更适合全球网络
+test-timeout: 3 # 缩短测试超时时间到3秒，更适合移动网络波动
+
+# 自动选择相关设置 - 提高移动设备的自动化程度
+auto-switch-interval: 1800 # 30分钟自动重新选择最佳节点
+latency-timeout: 3000 # 设置延迟超时为3秒，适应移动网络波动
+use-default-policy: true # 使用默认策略作为回退
