--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -137,71 +137,82 @@ ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/
 ruleset=🐟漏网之鱼,[]FINAL
 
 # ========== Clash核心配置 ==========
-# 基础网络设置 - 移动设备优化
-mixed-port: 7890 # 更改为标准端口，更通用且易于配置
+# 基础网络设置 - 中国大陆网络环境优化
+mixed-port: 7890
 allow-lan: true
 bind-address: '*'
 mode: rule
-log-level: silent # 降低日志级别减少写入操作，节省电量
-ipv6: false # 移动网络下保持关闭ipv6降低流量和电池消耗
+log-level: silent
+ipv6: false # 中国大陆IPv6支持不完善，关闭以避免连接问题
 external-controller: 127.0.0.1:9090
 external-ui: dashboard
 secret: ""
 profile:
-  store-selected: true # 持久化选择的节点，切换网络环境时保持配置
-  store-fake-ip: true # 保存fake-ip映射，减少重复解析
+  store-selected: true
+  store-fake-ip: true
 
-# 性能优化参数
+# 性能优化参数 - 针对中国大陆网络特点调整
 unified-delay: true
 tcp-concurrent: true
-keep-alive-interval: 15 # 设置TCP保活间隔15秒，优化移动网络下连接稳定性
-find-process-mode: strict # 精准的进程匹配模式
-sniffer: # 启用流量探测，提高域名识别准确度
+keep-alive-interval: 30 # 增大保活间隔，适应中国网络波动特点
+find-process-mode: strict
+sniffer:
   enable: true
   sniff:
     TLS:
       ports: [443, 8443]
     HTTP:
       ports: [80, 8080-8090]
-  force-domain: # 强制嗅探这些域名
+  force-domain:
     - '*.google.com'
     - '*.facebook.com'
     - '*.youtube.com'
     - '*.netflix.com'
-  skip-domain: # 跳过嗅探这些域名
+  skip-domain:
     - 'Mijia Cloud'
     - '*.alipay.com'
     - '*.taobao.com'
+    - '*.jd.com'
+    - '*.weixin.qq.com'
+    - '*.qq.com'
+    - '*.baidu.com'
 
-# TUN模式配置 - 移动设备优化
+# TUN模式配置 - 中国大陆网络优化
 tun:
   enable: true
-  stack: system
+  stack: system # 使用系统栈提高兼容性
   dns-hijack:
     - any:53
     - tcp://any:53
+    - udp://any:53  # 添加UDP拦截，解决部分应用DNS泄露问题
   auto-route: true
   auto-detect-interface: true
-  strict-route: true
-  mtu: 1500 # 较小的MTU值，适合移动网络环境
-  inet4-route-address: # 添加路由表以提高移动网络稳定性
+  strict-route: false # 国内环境设为false以避免某些应用无法联网
+  mtu: 1420 # 调整为适合中国网络环境的值
+  inet4-route-address:
     - 0.0.0.0/1
     - 128.0.0.0/1
-  # 以下额外配置提高移动设备的VPN稳定性
-  endpoint-independent-nat: true # 独立NAT确保连接一致性
-  include-uid: # 默认不包含的UID
+  inet6-route-address:
+    - ::/1
+    - 8000::/1
+  endpoint-independent-nat: true
+  include-uid:
     - 0
-  exclude-uid: # 排除网络管理应用
+  exclude-uid:
     - 1000
-  include-android-user: # 包含安卓用户
+  include-android-user:
     - 0
     - 10
-  disable-udp: false # 保持UDP支持，提高应用兼容性
+  disable-udp: false
+  stack-option:
+    mtu: 1420
+    gso: true
+    gso-size: 65535
 
-# DNS配置 - 移动设备优化
+# DNS配置 - 中国大陆网络环境优化
 dns:
   enable: true
-  ipv6: false # 移动网络下关闭ipv6 DNS查询
+  ipv6: false
   listen: 0.0.0.0:53
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
@@ -211,36 +222,53 @@ dns:
     - '*.qq.com'
     - '*.alipay.com'
     - '*.taobao.com'
+    - '*.tmall.com'
+    - '*.jd.com'
+    - '*.baidu.com'
+    - '*.weixin.qq.com'
     - 'mtalk.google.com'
     - 'lens.l.google.com'
-    - 'dl.google.com' # 避免Android系统更新问题
-    - 'android.clients.google.com' # 避免Android应用下载问题
+    - 'dl.google.com'
+    - 'android.clients.google.com'
+    - '*.126.com'
+    - '*.126.net'
+    - '*.163.com'
+    - '*.douyin.com'
+    - '*.kuaishou.com'
+    - '*.meituan.com'
+    - '*.dianping.com'
+    - '*.alicdn.com'
+    - '*.tencent.com'
+    - '*.tencent-cloud.com'
+    - '*.mi.com'
+    - '*.xiaomi.com'
+    - '*.pinduoduo.com'
+    - '*.unionpay.com'
+    - '*.ithome.com'
+    - '*.xunlei.com'
+    - '*.icloud-content.com'
+    - 'fast-edge.*.tiktokv.com'
+    - 'p16-tiktokcdn-*.ibyteimg.com'
   use-hosts: true
-  nameserver-cache-size: 4096 # 减小缓存大小，避免内存占用过大
-  cache-size: 8192 # 提高DNS缓存大小，减少重复查询
-  cache-expire: 3600 # 设置缓存过期时间为1小时，平衡性能和准确性
-  prefer-h3: false # 移动网络下HTTP/3不稳定，关闭
-  bootstrap-dns: # 引导DNS服务器，在启动时使用
-    - 223.5.5.5
-    - 119.29.29.29
-    - 8.8.8.8
+  nameserver-cache-size: 8192 # 墛大缓存提高访问速度
+  cache-size: 10240 # 针对中国网络提高缓存容量
+  cache-expire: 7200 # 延长缓存有效期至2小时，减少DNS查询频率
+  prefer-h3: false
 
-  # DNS预热功能 - 针对移动设备优化
+  # DNS预热功能 - 针对中国网站优化
   prefetch-domain: true
   prefetch-domains:
-    - 'google.com'
-    - 'youtube.com'
-    - 'github.com'
-    - 'openai.com'
-    - 'bing.com'
     - 'baidu.com'
+    - 'weibo.com'
+    - 'qq.com'
     - 'bilibili.com'
     - 'alipay.com'
     - 'taobao.com'
-    - 'weibo.com' # 常用中国社交媒体
-    - 'jd.com' # 常用中国电商
-    - 'douyin.com' # 常用短视频
-  prefetch-interval: 600 # 10分钟预热一次，在移动网络下平衡性能和流量消耗
+    - 'jd.com'
+    - 'weixin.qq.com'
+    - 'douyin.com'
+    - 'zhihu.com'
+  prefetch-interval: 1800 # 设置为30分钟，平衡性能和网络消耗
 
   # 默认DNS服务器 - 优先使用国内DNS降低延迟
   default-nameserver:
@@ -250,19 +278,17 @@ dns:
 
   # 主要DNS服务器 - 优化移动网络下的解析速度
   nameserver:
-    - https://223.5.5.5/dns-query # 阿里DNS优先，移动网络友好
-    - https://doh.pub/dns-query # 中国公共DNS，速度快
-    - tls://223.5.5.5:853 # 阿里TLS备选
-    - https://dns.alidns.com/dns-query # 备选
+    - https://dns.alidns.com/dns-query # 阿里加密DNS
+    - https://223.5.5.5/dns-query # 阿里DNS备选
+    - https://doh.pub/dns-query # 腾讯DoH
 
   # 国外回落DNS - 选择延迟较低的服务器
   fallback:
     - https://dns.google/dns-query
     - https://cloudflare-dns.com/dns-query
-    - tls://1.1.1.1:853 # Cloudflare TLS备选
-    - https://dns.quad9.net/dns-query
+    - tls://8.8.4.4:853 # Google备选，使用TLS降低干扰
 
-  # DNS污染防护 - 优化规则避免冗余查询
+  # DNS污染防护 - 针对中国网络环境优化
   fallback-filter:
     geoip: true
     geoip-code: CN
@@ -270,25 +296,72 @@ dns:
       - 240.0.0.0/4
       - 127.0.0.1/8
       - 0.0.0.0/32
-    # 精简关键域名列表，减少不必要的回落查询
+      - 100.64.0.0/10 # 添加运营商CGNAT地址
     domain:
       - '+.google.com'
       - '+.facebook.com'
       - '+.youtube.com'
       - '+.github.com'
+      - '+.twitter.com'
+      - '+.instagram.com'
+      - '+.wikipedia.org'
       - '+.netflix.com'
       - '+.openai.com'
 
-# 代理模式高级设置
-proxy-groups-first: true # 优先测试代理组，提高速度
-global-client-fingerprint: chrome # 使用Chrome指纹，提高兼容性
+# 代理模式高级设置 - 中国大陆网络优化
+proxy-groups-first: true
+global-client-fingerprint: chrome
 
-# 移动设备网络状态检测
-url-test-interval: 600 # 延长测速间隔到10分钟，节省电量和流量
-connection-test-url: https://cp.cloudflare.com/generate_204 # 更换测试网址，更适合全球网络
-test-timeout: 3 # 缩短测试超时时间到3秒，更适合移动网络波动
+# 中国大陆网络状态检测优化
+url-test-interval: 1200 # 设为20分钟，平衡准确性和网络消耗
+connection-test-url: https://www.gstatic.com/generate_204 # 此URL在中国访问较稳定
+test-timeout: 5 # 增加超时时间，适应中国网络波动
+tolerance: 150 # 添加延迟容差，避免频繁切换
 
-# 自动选择相关设置 - 提高移动设备的自动化程度
-auto-switch-interval: 1800 # 30分钟自动重新选择最佳节点
-latency-timeout: 3000 # 设置延迟超时为3秒，适应移动网络波动
-use-default-policy: true # 使用默认策略作为回退
+# 自动选择相关设置 - 中国大陆网络优化
+auto-switch-interval: 3600 # 设为1小时，减少切换频率
+latency-timeout: 5000 # 增加延迟超时至5秒，适应网络波动
+use-default-policy: true
+
+# 中国大陆网络环境特殊优化
+tcp-concurrent: true
+authentication: []
+external-controller-tls: ""
+
+# 优化流量管理以应对运营商QoS限制
+experimental:
+  ignore-resolve-fail: true  # 忽略DNS解析失败，避免连接中断
+  interface-name: en0  # 自动选择合适的网络接口
+  sniff-tls-sni: true  # 嗅探TLS SNI
+
+# 优化的TUN配置 - 防止运营商劫持
+ebpf:
+  auto-redir: false  # 自动重定向，处理复杂网络环境
+  redirect-to-tun:
+    - eth0
+
+# 国内/国外延迟差异化处理
+url-test-interval: 1200  # 20分钟测试一次，减少资源消耗
+tolerance: 150  # 容忍150ms延迟差异，避免频繁切换节点
+
+# 网络特征混淆，避免流量特征识别
+global-client-fingerprint: chrome  # 使用Chrome指纹
+geodata-mode: true  # 使用GeoIP数据提高判断准确性
+tcp-connection-reuse: true  # TCP连接复用提高性能
+
+# 中国环境特殊网络状态处理
+disconnection-check:
+  enable: true
+  timeout: 5000  # 5秒超时更适合中国网络波动
+  reconnect-timeout: 10000  # 10秒后重连
+
+# 高级DNS防泄漏设置
+local-dns-resolve: false  # 避免本地DNS解析泄漏
+disable-system-dns: true  # 禁用系统DNS
+udp-relay-for-dns-traffic: true  # DNS流量使用UDP中继
+
+# 针对运营商干扰的优化配置
+traffic-control:
+  enable: true
+  tcp-idle-timeout: 900  # 15分钟没活动关闭TCP，减少资源占用
+  udp-idle-timeout: 60   # 减少UDP连接保持时间
